[metadata]
name = awc-cli
version = attr: awc_cli.__version__
author = Ari Archer
author_email = ari.web.xyz@gmail.com
url = https://ari-web.xyz/gh/awc-cli
description = cli for https://server.ari-web.xyz/
long_description = file: README.md
long_description_content_type = text/markdown
keywords = http, comments, api, https, awc
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Typing :: Typed

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    awc>=3.0.0
    sqlparse

[options.package_data]
* = *.typed

[options.entry_points]
console_scripts =
    awc = awc_cli.__main__:main

[bdist_wheel]
universal = 1
